fixed spacing for room information on right box

--- a/style.css
+++ b/style.css
@@ -190,6 +190,9 @@ p {
   justify-content: space-between;
   align-items: center;
 }
+.right__tableValuesName {
+  margin-right: 5px;
+}
 .right__tableInfoLogo {
   background-image: url("./images/rightFloorInfo/Group 19107.svg");
   background-repeat: no-repeat;
@@ -220,6 +223,7 @@ p {
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
+  width: 150px;
 }
 .right_tableRoomValuesLeftLogoX {
   background-image: url("./images/rightFloorInfo/Group 19080.svg");
@@ -234,6 +238,7 @@ p {
   font-size: 16px;
   color: #6a7074;
 }
+
 .right_tableRoomValuesLeftPencile {
   background-image: url("./images/rightFloorInfo/UI Icon-Glyph-edit-$ui-05.svg");
   background-repeat: no-repeat;
@@ -255,7 +260,6 @@ p {
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-  align-self: flex-end;
 }
 .right_tableRoomValuesRightDotPath {
   width: 16px;
@@ -263,7 +267,8 @@ p {
   background: #72e5c2 0% 0% no-repeat padding-box;
   box-shadow: 0px 0px 2px #00000076;
   opacity: 1;
-  border-radius: 30px;
+  border-radius: 45px;
+  margin: 0 5px;
 }
 .right__bottomButtonsWrapper {
   border-top: 0.5px solid rgb(177, 190, 200);
